--- a/src/fonts.css
+++ b/src/fonts.css
@@ -141,3 +141,143 @@
          url('../fonts/SourceSansPro-BlackIt.otf.woff2') format('woff2'),
          url('../fonts/SourceSansPro-BlackIt.ttf') format('truetype');
 }
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 200;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-ExtraLight.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-ExtraLight.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-ExtraLight.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-Light.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-Light.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-Light.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-Regular.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-Regular.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-Medium.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-Medium.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-Medium.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-Semibold.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-Semibold.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-Semibold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 700;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-Bold.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-Bold.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 900;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-Black.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-Black.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-Black.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 200;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-ExtraLightIt.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-ExtraLightIt.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-ExtraLightIt.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 300;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-LightIt.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-LightIt.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-LightIt.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 400;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-It.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-It.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-It.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 500;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-MediumIt.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-MediumIt.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-MediumIt.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 600;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-SemiboldIt.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-SemiboldIt.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-SemiboldIt.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 700;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-BoldIt.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-BoldIt.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-BoldIt.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: 900;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('../fonts/SourceCodePro-BlackIt.ttf.woff2') format('woff2'),
+         url('../fonts/SourceCodePro-BlackIt.otf.woff') format('woff'),
+         url('../fonts/SourceCodePro-BlackIt.ttf') format('truetype');
+}
