--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $font-size-base: 14px;
 $icon-font-path: "~/bootstrap-sass/assets/fonts/bootstrap/";
 
 $font-family-sans-serif: 'Source Sans Pro', Cantarell, 'Droid Sans', Ubuntu, 'DejaVu Sans', Arial, sans-serif;
+$font-family-monospace: 'Source Code Pro', Monaco, 'Bitstream Vera Sans Mono', 'Lucida Console', monospace;
 
 /* Colors */
 /* ========================================================================== */
